test/grad/good/26.cc
int main()
{
    for (int i = 0; i < 10; i++)
    {
        int j = i;
        return j;
    }
    for (double i = 5; i < true; i--)
    {
        bool j = 29472 == 2.242;
    }
    return 3;
}