test/grad/bad/26.cc
int main()
{
    for (int i = 0; i = 10; i++)
    {
        int j = i;
        return j;
    }
    return 3;
}